@@ -104,9 +104,12 @@ public class SslInfo {
 
 		private final List<CertificateChainInfo> certificateChains;
 
+		private final List<CertificateChainInfo> trustStoreCertificates;
+
 		private BundleInfo(String name, SslBundle sslBundle) {
 			this.name = name;
 			this.certificateChains = extractCertificateChains(sslBundle.getStores().getKeyStore());
+			this.trustStoreCertificates = extractCertificateChains(sslBundle.getStores().getTrustStore());
 		}
 
 		private List<CertificateChainInfo> extractCertificateChains(@Nullable KeyStore keyStore) {
@@ -132,6 +135,10 @@ public class SslInfo {
 			return this.certificateChains;
 		}
 
+		public List<CertificateChainInfo> getTrustStoreCertificates() {
+			return this.trustStoreCertificates;
+		}
+
 	}
 
 	/**
@@ -150,9 +157,17 @@ public class SslInfo {
 
 		private List<CertificateInfo> extractCertificates(KeyStore keyStore, String alias) {
 			try {
+				// First try to get the certificate chain (works for PrivateKeyEntry)
 				Certificate[] certificates = keyStore.getCertificateChain(alias);
-				return (!ObjectUtils.isEmpty(certificates))
-						? Arrays.stream(certificates).map(CertificateInfo::new).toList() : Collections.emptyList();
+				if (!ObjectUtils.isEmpty(certificates)) {
+					return Arrays.stream(certificates).map(CertificateInfo::new).toList();
+				}
+				// Fall back to single certificate (works for trustedCertEntry)
+				Certificate certificate = keyStore.getCertificate(alias);
+				if (certificate != null) {
+					return List.of(new CertificateInfo(certificate));
+				}
+				return Collections.emptyList();
 			}
 			catch (KeyStoreException ex) {
 				return Collections.emptyList();
